# log4cxxWin32

./: .gitmodules  README.md  appveyor.yml
cmake/: CMakeLists.txt
msvc15/: apr.vcxproj  apr.vcxproj.filters  aprutil.vcxproj  aprutil.vcxproj.filters  log4cxx.sln  log4cxx.vcxproj  log4cxx.vcxproj.filters  xml.vcxproj  xml.vcxproj.filters
patch/: patch.bat
scripts/: configure.bat  installAsAppveyorDependency.ps1  patch.bat
